--- a/environment.yml
+++ b/environment.yml
@@ -1,17 +1,17 @@
-name: langsplat
+name: lmgs
 channels:
   - pytorch
   - conda-forge
   - defaults
 dependencies:
   - open-clip-torch
-  - cudatoolkit=11.6
-  - plyfile=0.8.1
+  - cudatoolkit
+  - plyfile
   - python
-  - pip=22.3.1
-  - pytorch=1.12.1
-  - torchaudio=0.12.1
-  - torchvision=0.13.1
+  - pip
+  - pytorch
+  - torchaudio
+  - torchvision
   - tqdm
   - opencv
   - tensorboard
@@ -19,7 +19,12 @@ dependencies:
   - matplotlib
   - typing
   - pathlib
+  - open3d
+  - pytorch3d
+  - lpips
+  - trimesh
   - pip:
-    - submodules/segment-anything-langsplat
-    - submodules/langsplat-rasterization
-    - submodules/simple-knn
+      - submodules/segment-anything-langsplat
+      - submodules/langsplat-rasterization
+      - submodules/simple-knn
+      - PGSR/submodules/diff-plane-rasterization
